Fixed the alignment issue.

--- a/app/styles/components/new-cards/activities/_gru-add-content-card.scss
+++ b/app/styles/components/new-cards/activities/_gru-add-content-card.scss
@@ -10,6 +10,10 @@
         display: grid;
         grid-template-rows: auto auto;
         padding: 0px 8px;
+        .title {
+          margin-top: 5px;
+          line-height: 1.3;
+        }
         .collection-info {
           display: grid;
           grid-template-columns: auto;
